# lidar_clustering_bench

./: LICENSE  README.md
adaptive_clustering/: README.md
autoware_clustering/: README.md
autoware_clustering/autoware_msgs/: CMakeLists.txt  package.xml
autoware_clustering/autoware_msgs/msg/: DetectedObject.msg
autoware_clustering/lidar_euclidean_cluster_detect/: CMakeLists.txt  package.xml
autoware_clustering/lidar_euclidean_cluster_detect/config/: params.yaml
autoware_clustering/lidar_euclidean_cluster_detect/launch/: lidar_euclidean_cluster_detect_param.launch  lidar_euclidean_cluster_detect_param.rviz
autoware_clustering/lidar_euclidean_cluster_detect/nodes/lidar_euclidean_cluster_detect/: lidar_euclidean_cluster_detect.cpp
depth_clustering/: README.md
euclidean_clustering/: CMakeLists.txt  README.md  package.xml
euclidean_clustering/launch/: euclidean_clustering.launch  euclidean_clustering.rviz
euclidean_clustering/src/: euclidean_clustering.cpp
evaluation/: README.md  clustering_clean.py  iou_frame.py  iou_timestam.py  time_clean.py  time_plot.py
laser_ring/: CMakeLists.txt  README.md  package.xml
laser_ring/launch/: ring.launch
laser_ring/src/: ring.py
launch/: README.md  bag_play.launch  eult_clustering.launch  kitti_lidar.launch  lcas_clustering.launch
points_ground_filter/: README.md
results/: README.md  adaptive_clustering_eu_noground.txt  adaptive_clustering_lcas.txt  autoware_clustering_eu.txt  autoware_clustering_eu_noground.txt  autoware_clustering_lcas.txt  depth_clustering_lcas.txt  iou.txt  iou_frame.py  iou_timestamp.py
run_clustering/launch/: run_clustering.launch  run_clustering.rviz
run_clustering/nodes/clustering/: scanlinerun.cpp
run_clustering/nodes/ground_filter/: groundplanfit.cpp
